--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,16 +1,14 @@
-﻿/*************************
-*******Typography******
-**************************/
-
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,400italic,500,700,100);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800,300,600,700);
-@import url(http://fonts.googleapis.com/css?family=Abel);
+﻿
 body {
     font-family: 'Roboto', sans-serif;
     position: relative;
     font-weight: 400px;
 }
-
+button {
+    background: transparent;
+    border: none;
+    outline: none;
+}
 ul li {
     list-style: none;
 }
@@ -957,7 +955,10 @@ h2.title {
     border-top: 1px solid #F7F7F0;
 }
 
-.choose ul li a {
+.choose ul li button {
+    border: none;
+    background: transparent;
+    outline: none;
     color: #B3AFA8;
     font-family: 'Roboto', sans-serif;
     font-size: 13px;
@@ -965,11 +966,11 @@ h2.title {
     padding-right: 0;
 }
 
-.choose ul li a i {
+.choose ul li button i {
     margin-right: 5px;
 }
 
-.choose ul li a:hover {
+.choose ul li button:hover {
     background: none;
     color: #FE980F;
 }
@@ -1553,6 +1554,7 @@ h2.title {
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
     font-weight: normal;
+    text-align: center;
 }
 
 #cart_items .cart_info .table.table-condensed thead tr {
@@ -1571,6 +1573,7 @@ h2.title {
     border-top: 0 none;
     vertical-align: inherit;
     margin-right: 5px;
+    text-align: center;
 }
 
 #cart_items .cart_info .image {
@@ -1594,7 +1597,8 @@ h2.title {
 
 #cart_items .cart_info .cart_price p {
     color: #696763;
-    font-size: 18px
+    font-size: 18px;
+    text-align: center;
 }
 
 #cart_items .cart_info .cart_total_price {
@@ -2439,4 +2443,12 @@ textarea {
 
 .contact-info .social-networks ul li a:hover {
     color: #FE980F;
+}
+
+.cart_quantity_button {
+    display: flex;
+}
+.cart_quantity_button button {
+    font-size: 20px;
+    justify-content: center;
 }
