--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2454,12 +2454,24 @@ textarea {
 }
 
 .total__cart {
-  color: #fff;
-  font-style: unset;
-  position: absolute;
-  top: -12px;
-  right: -28px;
-  border-radius: 50%;
-  background: red;
-  padding: 0 7px;
+    color: #fff;
+    font-style: unset;
+    position: absolute;
+    top: -12px;
+    right: -28px;
+    border-radius: 50%;
+    background: red;
+    padding: 0 7px;
+}
+.quatity__product {
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+}
+.name_product {
+    display: block;
+    padding-bottom: 20px;
+    color: #fff;
+    font-weight: bold;
 }
